--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -13,6 +13,7 @@ body{
     flex-direction: column;
     justify-content: start;
     align-items: center;
+    background-color: rgba(22, 37, 53, 0.035);
 }
 p{
     color: #4F5665;
@@ -184,6 +185,16 @@ h3{
     color: #4F5665;
 }
 
+/*------*/
+.bottom_main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 140px;
+    padding-bottom: 250px;
+    border-radius: 75.667px;
+    border: 25.222px solid #FFF;
+}
 /*----------plan----------*/
 
 .plan{
@@ -212,7 +223,7 @@ h3{
     border: 1px solid #DDDDDD;
     border-radius: 13px;
 }
-.plan__list--item h3{
+.plan__list--item h2{
     margin: 40px auto;
 }
 .plan__list--item ul{
