--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -100,6 +100,7 @@ h3{
 }
 
 /*--------------------main--------------------*/
+/*---------------top_main---------------*/
 /*----------getting----------*/
 
 .getting{
@@ -185,11 +186,13 @@ h3{
     color: #4F5665;
 }
 
-/*------*/
+/*---------------bottom_main---------------*/
+
 .bottom_main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 200px;
     padding-top: 140px;
     padding-bottom: 250px;
     border-radius: 75.667px;
@@ -243,4 +246,22 @@ h3{
 }
 .plan__list--item .btn{
     padding: 17px 83px;
+}
+
+/*----------network----------*/
+
+.network{
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
+}
+.network h2{
+    margin-bottom: 26px;
+    width: 511px;
+    text-align: center;
+}
+.network p{
+    margin-bottom: 200px;
+    width: 740px;
+    text-align: center;
 }
