--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -14,6 +14,7 @@ body{
     justify-content: start;
     align-items: center;
     background-color: rgba(22, 37, 53, 0.035);
+    width: 100%;
 }
 p{
     color: #4F5665;
@@ -100,13 +101,28 @@ h3{
 }
 
 /*--------------------main--------------------*/
+.main{
+    width: 100%;
+}
+
 /*---------------top_main---------------*/
+
+.top_main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 /*----------getting----------*/
 
 .getting{
-    padding: 110px 200px;
     display: flex;
     gap: 54px;
+    margin-top: 110px;
+    margin-bottom: 137px;
+}
+.getting_content{
+    width: 740px;
 }
 .getting_content h1{
     margin-bottom: 27px;
@@ -124,7 +140,10 @@ h3{
     color: #ffffff;
     font-size: 21px;
 }
-
+.getting_img img{
+    width: 815px;
+    height: 510px;
+}
 
 /*----------infor----------*/
 
@@ -132,16 +151,18 @@ h3{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 137px auto;
-    padding: 50px 200px;
+    width: 1520px;
+    height: 266px;
 }
 .item{
     display: flex;
+    justify-content: space-between;
     align-items: center;
     gap: 50px;
     position: relative;
     padding-left: 150px;
     padding-right: 110px;
+    height: 86px;
 }
 .item_content > p{
     color: #0B132A;
@@ -155,17 +176,18 @@ h3{
     content: "";
     display: block;
     position: absolute;
-    top: -50%;
+    top: 0;
     left: 0;
     background-color: #EEEFF2;
     width: 2px;
-    height: 200%;
+    height: 100%;
 }
 
 /*----------feature----------*/
 
 .feature{
-    padding: 0 200px 117px;
+    padding-top: 117px;
+    padding-bottom: 117px;
     display: flex;
     gap: 226px;
     align-items: flex-end;
@@ -193,10 +215,15 @@ h3{
     flex-direction: column;
     align-items: center;
     gap: 200px;
+    position: relative;
     padding-top: 140px;
     padding-bottom: 250px;
-    border-radius: 75.667px;
-    border: 25.222px solid #FFF;
+    width: 100%;
+    border-top: 25.222px solid #FFF;
+    border-left: 25.222px solid #FFF;
+    border-right: 25.222px solid #FFF;
+    border-top-right-radius: 75.667px;
+    border-top-left-radius: 75.667px;
 }
 /*----------plan----------*/
 
@@ -204,6 +231,7 @@ h3{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 1520px;
 }
 .plan .p1{
     margin-top: 26px;
@@ -225,6 +253,9 @@ h3{
     width: 440px;
     border: 1px solid #DDDDDD;
     border-radius: 13px;
+}
+.plan__list--item:hover{
+    border: 1px solid var(--clst);
 }
 .plan__list--item h2{
     margin: 40px auto;
@@ -254,22 +285,102 @@ h3{
     display: flex;
     flex-direction: column;
     align-items: center;   
+    width: 1520px;
 }
 .network h2{
     margin-bottom: 26px;
     width: 511px;
     text-align: center;
 }
-.network p{
+.network .p1{
     margin-bottom: 200px;
     width: 740px;
     text-align: center;
 }
 /*----------connection----------*/
+
 .connection{
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 300px;
-    width: calc(100% - 400px);
+    width: 1520px;
+}
+
+/*----------customer----------*/
+
+.customer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1520px;
+}
+.customer h2{
+    width: 597px;
+    text-align: center;
+    margin-bottom: 26px;
+}
+.customer .p1{
+    width: 740px;
+    text-align: center;
+    margin-bottom: 80px;
+}
+.customer__comment{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px;
+}
+.customer__comment--item{
+    padding: 40px;
+    border: 3px solid #DDDDDD;
+    border-radius: 13px;
+}
+.customer__comment--item:hover{
+    border: 3px solid var(--clst);
+    cursor: pointer;
+}
+.customer__comment--item_infor{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 66px;
+    margin-bottom: 26px;
+}
+.name{
+    margin-left: -20px;
+}
+.name p {
+    margin-top: -15px;
+}
+.rate,
+.customer__comment--item_cmt{
+    font-size: 21px;
+}
+
+/*----------banner----------*/
+
+.banner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    left: 50%;
+    top: calc(100% - 155px);
+    transform: translateX(-50%);
+    background-color: #FFFFFF;
+    width: 1520px;
+    height: 310px;
+    margin-bottom: -50%;
+    padding: 78px 93px;
+    border-radius: 13px;
+    box-shadow: 0 0 30px -20px #dddddd;
+}
+.sub{
+    width: 547px;
+}
+.banner .btn{
+    background-color: var(--clst);
+    padding: 23px 86px;
+    border-radius: 13px !important;
+    color: #ffffff;
 }
